Fri Aug 16 00:00:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_divmod): Simplify an expression.

Thu Aug 15 23:26:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_normal): Remove a local variable.

Thu Aug 15 23:08:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Use bigdivrem_restoring directly to
	  reduce working buffer and memory copy.
	  (rb_big2str1): Allocate working buffer for big2str_karatsuba here.

Thu Aug 15 20:51:29 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c, internal.h (rb_io_flush_raw): new function to select calling
	  fsync() (on Windows).

	* io.c (rb_io_flush_raw): use above function.

	* file.c (rb_file_truncate): use above function.

	* test/ruby/test_file.rb (TestFile#test_truncate_size): test for
	  above changes.

Thu Aug 15 18:39:31 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (clock_gettime): improve precision when freq is less
	  than and nearly equals 10**9.

Thu Aug 15 17:43:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_lazy_sweep): remove heap_increment() here because heap_inc
	  may be 0.

Thu Aug 15 16:59:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_rewind): remove fsync() for Windows to improve the
	  performance.

Thu Aug 15 16:30:23 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_rmdir):
	  FileUtils.rmdir ignores Errno::ENOTEMPTY, so, in such cases, this
	  assertion is nonsence.

Thu Aug 15 15:49:35 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): [DOC] FreeBSD 7.1 supports
	  CLOCK_THREAD_CPUTIME_ID.
	  http://www.freebsd.org/releases/7.1R/relnotes.html

Thu Aug 15 14:30:23 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h, win32/Makefile.sub, win32/win32.c
	  (clock_gettime): [experimental] emulates clock_gettime(2) of posix.

Thu Aug 15 02:32:40 2013  Zachary Scott  <e@zzak.io>

	* hash.c (rb_hash_aset): [DOC] Document key dup patch by @kachick